--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     #      - "3306:3306"
     restart: always
     environment:
-      MYSQL_DATABASE: app_db
+      #MYSQL_DATABASE: app_db
       #MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_ROOT_PASSWORD: root
       TZ: Europe/Paris
